--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=Vidhu@1174
-DB_NAME=server_monitoring
+DB_HOST=3222k.h.filess.io
+DB_USER=HPECloudStorage_famouswave
+DB_PASSWORD=845d9ed0c994d849b75268960d68d342c383c505
+DB_NAME=HPECloudStorage_famouswave
+DB_PORT=61002
 
-TARGET_DIR = D:\sem-6\HPE\SupportDump-20250323T053844Z-001\SupportDump\CSFE-64399_ilo_component_failure\CN7544043XX_appliance_bay_1-corpus-cristi.proto.lab-CI-2025_02_13-10_52_27\sumservice\ci\var\fwdrivers\installsets
-LOG_FILE_PATH = D:\sem-6\HPE\SupportDump-20250323T053844Z-001\SupportDump\CSFE-64399_ilo_component_failure\appliance\ci\logs\ciDebug.log
+TARGET_DIR =/home/devendra/Projects/HPE/new dump files/drive-download-20250320T150820Z-001/CSFE-64399_ilo_component_failure/CN7544043XX_appliance_bay_1-corpus-cristi.proto.lab-CI-2025_02_13-10_52_27/sumservice/ci/var/fwdrivers/installsets
+LOG_FILE_PATH =/home/devendra/Projects/HPE/new dump files/drive-download-20250320T150820Z-001/CSFE-64399_ilo_component_failure/CN7544043XX_appliance_bay_1-corpus-cristi.proto.lab-CI-2025_02_13-10_52_27/appliance/ci/logs/ciDebug.log
 
 TARGET_DIR_STAGED = D:\sem-6\HPE\SupportDump-20250323T053844Z-001\SupportDump\CSFE-65426_baseline_add_to_SUM_failure_install_set_generation_failed\sumservice\ci\var\fwdrivers\installsets
-LOG_FILE_PATH_STAGED = D:\sem-6\HPE\SupportDump-20250323T053844Z-001\SupportDump\CSFE-65426_baseline_add_to_SUM_failure_install_set_generation_failed\appliance\ci\logs\ciDebug.log
+LOG_FILE_PATH_STAGED = /home/devendra/Projects/HPE/new dump files/drive-download-20250320T150820Z-001/CSFE-64399_ilo_component_failure/CN7544043XX_appliance_bay_1-corpus-cristi.proto.lab-CI-2025_02_13-10_52_27/appliance/ci/logs/ciDebug.log
