frontend integrated with the db

--- a/.env
+++ b/.env
@@ -8,3 +8,14 @@ LOG_FILE_PATH = D:\sem-6\HPE\SupportDump-20250323T053844Z-001\SupportDump\CSFE-6
 
 TARGET_DIR_STAGED = D:\sem-6\HPE\SupportDump-20250323T053844Z-001\SupportDump\CSFE-65426_baseline_add_to_SUM_failure_install_set_generation_failed\sumservice\ci\var\fwdrivers\installsets
 LOG_FILE_PATH_STAGED = D:\sem-6\HPE\SupportDump-20250323T053844Z-001\SupportDump\CSFE-65426_baseline_add_to_SUM_failure_install_set_generation_failed\appliance\ci\logs\ciDebug.log
+
+MONGO_USER=hpe
+MONGO_PASS=HPE@1234
+MONGO_HOST=mongodb.phazite.space
+MONGO_PORT=27017
+MONGO_DB=log_analysis_db
+
+MINIO_ENDPOINT=minio-access.phazite.space
+MINIO_ACCESS_KEY=accessionkey
+MINIO_SECRET_KEY=HPE@1234
+MINIO_SECURE=True
